src/objects/DD_Collection__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Transfer_Agent_Error__c</fullName>
        <label>Staus Details</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instruction__c</fullName>
        <label>Instruction</label>
        <referenceTo>Payonomy_Instruction__c</referenceTo>
        <relationshipLabel>DD Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PayDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Display__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent exception</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IMAGE( 
CASE( Status_Display__c , 
&quot;Submitted&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Processing error&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;Agent exception&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/img/samples/light_red.gif&quot;), 
&quot;Status&quot;)</formula>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Display__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New instruction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DD Collection</label>
    <nameField>
        <displayFormat>DDC - {0}</displayFormat>
        <label>DD Collection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DD Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>